# delegated-spartan

./: .gitignore  Cargo.toml  Readme.md  delegated-spartan.code-workspace
app/: .gitignore  Cargo.toml  Readme.md  build.rs  tauri.conf.json
app/.cargo/: config.toml
app/capabilities/: default.json
app/src/: lib.rs
app/ui/: README.md  package-lock.json  package.json  tailwind.config.js
app/ui/src/: app.html
app/ui/src/lib/: index.ts
app/ui/src/routes/: +layout.ts  +page.svelte
benches/: allocator.rs  hyrax.rs  ligero.rs  mle.rs  ntt.rs  pedersen.rs  poseidon.rs  utils.rs
src/: allocator.rs  lib.rs  main.rs  merkle_tree.rs  mle.rs  ntt.rs  reed_solomon.rs  sparse_matrix.rs  sum_check.rs  transcript.rs
src/hyrax/: mod.rs  pedersen.rs  pederson.rs
src/ligero/: mod.rs
src/pcs/: basefold.rs  ligero.rs  mod.rs
src/pcs/hyrax/: mod.rs  pedersen.rs
src/poseidon/: constants.rs  find_matrix.sage  mod.rs
src/transcript/: mod.rs  sponge.rs
src/transcript/poseidon/: mod.rs
src/transcript/poseidon2/: constants.rs  mod.rs
