[package]
name = "delegated-spartan"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
ark-bn254 = { version = "0.4.0", features = ["std"] }
rand_chacha = { version = "0.3.1", features = ["simd"] }
bincode = "1.3.3"
ark-crypto-primitives = { version = "0.4.0", features = ["sponge"] }
num-traits = "0.2.19"
ark-ff = { version = "0.4.2", features = ["asm", "parallel", "rayon", "std"] }
hex-literal = "0.4.1"
ark-ec = "0.4.2"

[profile.release]
debug = true # Generate symbol info for profiling

# Doing light optimizations helps test performance more than it hurts build time.
[profile.test]
opt-level = 2

# Compilation profile for any non-workspace member.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
hex = "0.4.3"

[profile.bench]
harness = false

[[bench]]
name = "poseidon"
harness = false

[[bench]]
name = "pedersen"
harness = false
