[package]
name = "delegated-spartan"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { version = "0.4.0", features = ["std"] }
ark-ec = { version = "0.4.2", features = ["std"] }
ark-ff = { version = "0.4.2", features = ["asm", "std"] }
rand = "0.8.5"
rand_chacha = { version = "0.3.1", features = ["simd"] }
rayon = "1.10.0"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
itertools = "0.13.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
ark-serialize = "0.4.2"
num-traits = "0.2.19"

[dev-dependencies]
ark-poly = "0.4.2"              # NTT Benchmark comparison.
criterion = { version = "0.5" }
hex = "0.4.3"

[profile.release]
debug = true # Generate symbol info for profiling

# Doing light optimizations helps test performance more than it hurts build time.
[profile.test]
opt-level = 2

# Compilation profile for any non-workspace member.
[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "poseidon"
harness = false

[[bench]]
name = "pedersen"
harness = false

[[bench]]
name = "hyrax"
harness = false

[[bench]]
name = "mle"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "ligero"
harness = false
