cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "delegated-spartan-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.30.12", features = ["serde"] }
wgpu = { version = "0.20.1", features = ["webgl", "serde"] }

[profile.dev]
incremental = true          # Compile your binary in smaller steps.
rustflags = ["-Zthreads=8"] # Better compile performance.
panic = "abort"

[profile.release]
maccodegen-units = 1                         # Allows LLVM to perform better optimization.
lto = true                                   # Enables link-time-optimizations.
opt-level = 3                                # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"                              # Higher performance by disabling panic handlers.
strip = true                                 # Ensures debug symbols are removed.
trim-paths = "all"                           # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance.
